--- a/index.html
+++ b/index.html
@@ -17,6 +17,26 @@
         </nav>
     </header>
     <div id="content">
+        <h2 id="h2-inicio">Séries em Destaque</h2>
+        <hr>
+        <div class="series-container">
+            <div class="series-item">
+                <img src="imagens/stranger_things.jpeg" alt="Stranger Things">
+                <h3>Stranger Things</h3>
+            </div>
+            <div class="series-item">
+                <img src="imagens/the_crown.webp" alt="The Crown">
+                <h3>The Crown</h3>
+ 
+            </div>
+            <div class="series-item">
+                <img src="imagens/breaking_bad.jpeg" alt="Breaking Bad">
+                <h3>Breaking Bad</h3>
+            </div>
+            <div class="series-item">
+                <img src="imagens/game_of_thrones.jpeg" alt="Game of Thrones">
+                <h3>Game of Thrones</h3>
+            </div>
     </div>
 </body>
 </html>
