--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
             <button class="arrow right" onclick="scrollCarousel('minhas-series', 1)">›</button>
             </div>
-            <div class="card add">
+            <div class="card add" onclick="abrirFormulario('serie')">
                 <h3>+</h3>
                 <p>Adicionar</p>
             </div>
@@ -63,7 +63,6 @@
 
     <div class="carousel">
         <div class="carousel-track" id="favoritas-series">
-          <!-- suas séries favoritas já prontas -->
           <div class="series-container">
             <div class="series-item" onclick="mostrarDetalhes('breakingbad')">
               <img src="imagens/breaking_bad.jpeg" alt="Breaking Bad">
@@ -127,7 +126,6 @@
           <button class="arrow left" onclick="scrollCarousel('meus-filmes', -1)">‹</button>
 
           <div class="carousel-track" id="meus-filmes">
-            <!-- cards de filmes -->
             <div class="filme-container">
               <div class="filme-item" onclick="mostrarDetalhesFilme('origem')">
                 <img src="imagens/a origem.jpeg" alt="Inception">
@@ -149,7 +147,7 @@
           </div>
           <button class="arrow right" onclick="scrollCarousel('meus-filmes', 1)">›</button>
         </div>
-        <div class="card add">
+        <div class="card add" onclick="abrirFormulario('filme')">
           <h3>+</h3>
           <p>Adicionar</p>
         </div>
@@ -158,7 +156,6 @@
 
         <div class="carousel">
           <div class="carousel-track" id="favoritos-filmes">
-            <!-- seus filmes favoritos já prontos -->
             <div class="filme-container">
               <div class="filme-item" onclick="mostrarDetalhesFilme('origem')">
                 <img src="imagens/a origem.jpeg" alt="Inception">
@@ -181,6 +178,41 @@
         </div>
       </section>
     </div>
+
+    <div id="modal-formulario" class="modal">
+        <div class="modal-conteudo">
+            <span class="fechar" onclick="fecharFormulario()">&times;</span>
+            <h2 id="titulo-formulario">Adicionar Série</h2>
+            <form id="form-adicionar">
+                <div class="form-grupo">
+                    <label>Imagem da Capa:</label>
+                    <input type="file" id="input-imagem" accept="image/*">
+                    <div id="preview-imagem"></div>
+                </div>
+                <div class="form-grupo">
+                    <label>Nome:</label>
+                    <input type="text" id="input-nome" placeholder="Digite o nome">
+                </div>
+                <div class="form-grupo">
+                    <label>Avaliação:</label>
+                    <div class="estrelas-form">
+                        <span class="star-form" onclick="selecionarEstrelaForm(1)">★</span>
+                        <span class="star-form" onclick="selecionarEstrelaForm(2)">★</span>
+                        <span class="star-form" onclick="selecionarEstrelaForm(3)">★</span>
+                        <span class="star-form" onclick="selecionarEstrelaForm(4)">★</span>
+                        <span class="star-form" onclick="selecionarEstrelaForm(5)">★</span>
+                        <span class="star-form" onclick="selecionarEstrelaForm(6)">★</span>
+                        <span class="star-form" onclick="selecionarEstrelaForm(7)">★</span>
+                        <span class="star-form" onclick="selecionarEstrelaForm(8)">★</span>
+                        <span class="star-form" onclick="selecionarEstrelaForm(9)">★</span>
+                        <span class="star-form" onclick="selecionarEstrelaForm(10)">★</span>
+                    </div>
+                </div>
+                <button type="button" onclick="salvarItem()">Salvar</button>
+            </form>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
