resolve issues dos cards

--- a/index.html
+++ b/index.html
@@ -36,19 +36,26 @@
                   <div class="series-container">
                     <div class="series-item" onclick="mostrarDetalhes('the100')">
                       <img src="imagens/the100.jpeg" alt="the 100">
-                      <h3>9.9<b id="star">★</b></h3>
+                      <h3>
+                        <span id="display-the100">9.9</span> <b id="star">★</b>
+                      </h3>
                     </div>
                     <div class="series-item" onclick="mostrarDetalhes('stranger_things')">
                       <img src="imagens/stranger_things.jpeg" alt="stranger_things">
-                      <h3>9.8<b id="star">★</b></h3>
+                      <h3>
+                        <span id="display-stranger_things">9.8</span> <b id="star">★</b></h3>
                     </div>
                     <div class="series-item" onclick="mostrarDetalhes('it')">
                       <img src="imagens/it.jpeg" alt="it">
-                      <h3>9.7<b id="star">★</b></h3>
+                      <h3>
+                        <span id="display-it">9.7</span> <b id="star">★</b>
+                      </h3>
                     </div>
                     <div class="series-item" onclick="mostrarDetalhes('theboys')">
                       <img src="imagens/theboys.jpeg" alt="the boys">
-                      <h3>9.6<b id="star">★</b></h3>
+                      <h3>
+                        <span id="display-theboys">9.6</span> <b id="star">★</b>
+                      </h3>
                     </div>
                   </div>
                 </div>
